@@ -14,6 +14,6 @@ export("adjust",
        "getId",
        "getName",
        "setCalendar",
-       "getXPtr")
+       "getCalendar")
 S3method("print", "qlcalendar")
 importFrom("Rcpp", "evalCpp")
