@@ -4,10 +4,13 @@
 \alias{isBusinessDay}
 \title{Test for business days}
 \usage{
-isBusinessDay(dates)
+isBusinessDay(dates = NULL, xp = NULL)
 }
 \arguments{
-\item{dates}{A Date vector with dates to be examined}
+\item{dates}{An optional Date vector with dates to be examined, if missing the
+current day is used}
+
+\item{xp}{An option calendar object}
 }
 \value{
 A logical vector indicating which dates are business days
